// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./NetworkLogosList.stories FourNetworks 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <div
        class="networks"
      >
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Ethereum Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Polygon Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/137/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories InsideAccountBadgePill 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <span
        style="background-color: rgba(0, 0, 0, 0.05); border-radius: 9999px; padding: 3px; display: inline-flex; align-items: center;"
      >
        <div
          class="networks capped"
          style="--network-logo-size: 22px;"
        >
          <span
            class="inlineIndicator withLogo onlyLogo"
            data-testid="chain-logo"
          >
            <img
              alt="Ethereum Logo"
              data-testid="chain-indicator-network-logo-img"
              height="22"
              loading="lazy"
              src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
              style="min-width: 22px;"
              width="22"
            />
          </span>
          <span
            class="inlineIndicator withLogo onlyLogo"
            data-testid="chain-logo"
          >
            <img
              alt="Polygon Logo"
              data-testid="chain-indicator-network-logo-img"
              height="22"
              loading="lazy"
              src="https://safe-transaction-assets.staging.5afe.dev/chains/137/chain_logo.png"
              style="min-width: 22px;"
              width="22"
            />
          </span>
          <span
            class="inlineIndicator withLogo onlyLogo"
            data-testid="chain-logo"
          >
            <mock-icon
              class="rounded-full bg-[var(--color-background-main)]"
              style="height: 22px; width: 22px;"
            />
          </span>
          <div
            class="moreChainsIndicator"
          >
            +
            3
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories ManyNetworksWithHasMore 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <div
        class="networks capped"
      >
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Ethereum Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Polygon Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/137/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
        <div
          class="moreChainsIndicator"
        >
          +
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories ManyNetworksWithoutHasMore 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <div
        class="networks"
      >
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Ethereum Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Polygon Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/137/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <mock-icon
            class="rounded-full bg-[var(--color-background-main)]"
            style="height: 24px; width: 24px;"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories SingleNetwork 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <div
        class="networks"
      >
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Ethereum Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories TwoNetworks 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <div
        class="networks"
      >
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Ethereum Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
        <span
          class="inlineIndicator withLogo onlyLogo"
          data-testid="chain-logo"
        >
          <img
            alt="Polygon Logo"
            data-testid="chain-indicator-network-logo-img"
            height="24"
            loading="lazy"
            src="https://safe-transaction-assets.staging.5afe.dev/chains/137/chain_logo.png"
            style="min-width: 24px;"
            width="24"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
